tests/ui/expr/if/attrs/stmt-expr-gated.rs
fn main() {
    let _ = #[deny(warnings)] if true { //~ ERROR attributes on expressions
    } else if false {
    } else {
    };
}
